if (NOT PLATFORM_ONLY)
  add_subdirectory(cli-server)
  add_subdirectory(multiib)
  add_subdirectory(olap/flags)
  add_subdirectory(olap/prepared-queries)
  add_subdirectory(query-vectors)
  add_subdirectory(template)
  add_subdirectory(ndp)
  add_subdirectory(oltp/index-probe-plans)
  add_subdirectory(oltp/oltp-index-art)
endif()
